--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vue": "^4.3.0",
+    "@nanostores/lit": "^0.2.1",
+    "@nanostores/preact": "^0.5.1",
+    "@nanostores/solid": "^0.4.2",
+    "@nanostores/vue": "^0.10.0",
     "@types/alpinejs": "^3.13.10",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "alpinejs": "^3.14.0",
     "astro": "^4.9.2",
+    "astro-icon": "^1.1.0",
     "lit": "^3.1.3",
+    "nanostores": "^0.10.3",
     "preact": "^10.22.0",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
