--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@webcomponents/template-shadowroot": "^0.2.1",
     "alpinejs": "^3.14.0",
     "astro": "^4.9.2",
+    "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "lit": "^3.1.3",
     "nanostores": "^0.10.3",
