--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/solid-js": "^4.2.0",
     "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
     "@astrojs/vue": "^4.3.0",
     "@nanostores/lit": "^0.2.1",
     "@nanostores/preact": "^0.5.1",
