--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
     "@astrojs/vue": "^4.3.0",
+    "@inox-tools/request-nanostores": "^0.1.1",
     "@nanostores/lit": "^0.2.1",
     "@nanostores/preact": "^0.5.1",
     "@nanostores/solid": "^0.4.2",
@@ -29,7 +30,7 @@
     "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "lit": "^3.1.3",
-    "nanostores": "^0.10.3",
+    "nanostores": "^0.11.3",
     "preact": "^10.22.0",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.6.1",
